@@ -1,5 +1,11 @@
 2004-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* DLD-FUNCTIONS/eig.cc (Feig): Use new optional arg for EIG to
+	avoid computing eigenvectors if not requested.
+	Based on a patch from David Bateman  <dbateman@free.fr>.
+
+2004-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
 	* ov-cell.cc (all_strings): Always compute total required length
 	of retval.
 
